2011-01-08  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/network/Server.cpp: Remove X-Mas leftover casserole.
	* include/network/Server.h: Likewise.

	* include/network/MessagingGateway.h: Add documentation.

	* include/network/MessageQueueFactory.h: New factory method just
	for incoming and outgoing queue.
	Create conflict input for neighbors.
	* src/network/MessageQueueFactory.cpp: Likewise.

	* src/dmcs/Log.cpp: Initialize logger.

	* src/network/Makefile.am [linux]: Create libthreads.a to fix
	FTBFS.
	* testsuite/Makefile.am: Likewise.

	* src/dyndmcs/DynamicConfiguration.cpp: Fix undefined dfs_level.

	* include/dmcs/Log.h: Add global logging facility.
	* include/dmcs/Makefile.am: Likewise.
	* src/dmcs/Log.cpp: Likewise.
	* src/Makefile.am: Likewise.
	* src/dmcs/Makefile.am: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.

2011-01-08  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/MessageQueueFactory.h: Move the constants to
	header file.
	* src/network/MessageQueueFactory.cpp: Likewise.

	* include/network/Handler.h: Let the Handler take care of creating
	output_thread.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/StreamingCommandType.h: Support executing with a
	unique id for creating message queues.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

2011-01-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (TESTS_ENVIRONMENT): Make detailed Boost.Test reports.

	* src/dmcsc.cpp: Initial support for log4cxx.
	* src/dmcsd.cpp: Likewise.

	* configure.ac: Check for log4cxx and Boost.Asio.
	* src/Makefile.am: Likewise.

2011-01-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingDMCS.h: Give StreamingDMCS the master power.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.