@@ -78,11 +78,17 @@ namespace dmcs {
     virtual void
     sendConflict(Conflict* c, std::size_t from, std::size_t to, std::size_t prio);
 
+    virtual void
+    sendJoinIn(std::size_t k, std::size_t from, std::size_t to, std::size_t prio);
+
     virtual BeliefState*
     recvModel(std::size_t from, std::size_t& prio);
 
     virtual Conflict*
     recvConflict(std::size_t from, std::size_t& prio);
+
+    virtual struct JoinIn
+    recvJoinIn(std::size_t from, std::size_t& prio);
 
   };
 
